--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -20,8 +20,8 @@ bind = $mainMod, P, pseudo, # dwindle
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
-bind = $mainMod, j, movefocus, u
-bind = $mainMod, k, movefocus, d
+bind = $mainMod, j, movefocus, d
+bind = $mainMod, k, movefocus, u
 
 # Workspaces
 bind = $mainMod, code:10, workspace, 1
@@ -55,7 +55,7 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-bind = , Print, exec, hyprshot -m region -o ~/Pictures/Screenshots | wl-copy --type image/png 
+bind = , Print, exec, hyprshot -m region -o ~/Pictures/Screenshots 
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 # Resize windows with Vim keys (hjkl)
