NVIM: qqs keybindings et options

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,6 +57,7 @@ source = $hyprlandConfigFolder/env.conf
 # https://wiki.hyprland.org/Configuring/Variables/#general
 
 source = $hyprlandConfigFolder/look/general.conf
+source = $hyprlandConfigFolder/look/window_rules.conf
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 source = $hyprlandConfigFolder/look/decoration.conf
