--- a/.config/hypr/look/decoration.conf
+++ b/.config/hypr/look/decoration.conf
@@ -16,9 +16,11 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
+        size = 5 
+        passes = 2 
+        new_optimizations = on
+        ignore_opacity = false
+        xray = true
+        popups = true
     }
 }
